src/objects/User.object
<CustomObject>
    <fields>
        <fullName>genesis__Party_Type__c</fullName>
        <label>Party Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genesis__Type__c</fullName>
        <label>Quick Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>DEALER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch__c</fullName>
        <label>Current Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch_s_System_Date__c</fullName>
        <label>Current Branch&apos;s System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Current_System_Date__c</fullName>
        <label>Current System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Default_Branch__c</fullName>
        <label>Default Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Is_Teller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Teller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Teller_GL__c</fullName>
        <label>Teller GL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>loan__Teller_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Is_Teller__c &amp;&amp; ISBLANK( loan__Teller_GL__c )</errorConditionFormula>
        <errorMessage>GL must be entered for a teller.</errorMessage>
    </validationRules>
</CustomObject>